# Service-Observability

./: README.md
elasticsearch-logs/: .gitignore  Makefile  README.md  dev.sh  docker-compose.yml  pyproject.toml  test_api.sh
elasticsearch-logs/app/: __init__.py  main.py
elasticsearch-logs/app/core/: config.py  logging.py
elasticsearch-logs/app/routers/: health.py  orders.py  users.py
elasticsearch-logs/docker/: Dockerfile  Dockerfile.dev
elasticsearch-logs/scripts/: run-tests.sh  setup-kibana.sh  test-context-manager.py  test-logging.sh  test-summary.py
elasticsearch-logs/tests/: __init__.py  conftest.py  test_api.py  test_integration.py  test_logging.py
jaeger-tracing/: .env  API_REFERENCE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
jaeger-tracing/app/: main.py
jaeger-tracing/app/services/: __init__.py  order_service.py  payment_service.py  user_service.py
jaeger-tracing/config/: __init__.py  tracing.py
jaeger-tracing/docker/: Dockerfile  Dockerfile.dev
jaeger-tracing/kibana/: kibana.yml
jaeger-tracing/scripts/: create_demo_traces.py  demo_integration.sh  generate_traffic.py  hot_reload_demo.sh  load_test.py  setup.sh  setup_kibana.sh  setup_kibana_traces.py  start_full_stack.sh  start_stack.sh  test_api_endpoints.sh
jaeger-tracing/tests/: test_main.py
prometheus-metrics/: .env.example  .gitignore  LICENSE  Makefile  README.md  demo-microservices.sh  docker-compose.microservices.yml  docker-compose.yml  grafana-dashboard.json  pyproject.toml  requirements.txt  start-microservices.sh  start.sh  test_prometheus_integration.sh
prometheus-metrics/app/: __init__.py  database.py  main.py  models.py
prometheus-metrics/app/core/: config.py
prometheus-metrics/app/middleware/: metrics.py
prometheus-metrics/app/routers/: api.py  demo.py  health.py  inventory.py  metrics.py  orders.py  payments.py  products.py  tasks.py  users.py
prometheus-metrics/app/routers_old/: demo.py  health.py  orders.py  payments.py  users.py
prometheus-metrics/app/services/: __init__.py  inventory_service.py  notification_service.py  order_service.py  payment_service.py  product_service.py  user_service.py
prometheus-metrics/app/services_old/: __init__.py  metrics_service.py  order_service.py  payment_service.py  user_service.py
prometheus-metrics/config/: alert_rules.yml  prometheus-microservices.yml  prometheus.yml
prometheus-metrics/docker/: Dockerfile
prometheus-metrics/docs/: ALERTING.md  MAKEFILE_COMMANDS.md  POSTGRES_MONITORING.md
prometheus-metrics/microservices/: Dockerfile.template
prometheus-metrics/microservices/api-gateway/: Dockerfile  nginx.conf
prometheus-metrics/microservices/inventory-service/: Dockerfile  main.py  requirements.txt
prometheus-metrics/microservices/notification-service/: Dockerfile  main.py  requirements.txt
prometheus-metrics/microservices/order-service/: Dockerfile  main.py  requirements.txt
prometheus-metrics/microservices/payment-service/: Dockerfile  main.py  requirements.txt
prometheus-metrics/microservices/product-service/: Dockerfile  main.py  requirements.txt
prometheus-metrics/microservices/shared/: __init__.py  config.py  database.py  middleware.py  models.py  schemas.py
prometheus-metrics/microservices/user-service/: Dockerfile  main.py  requirements.txt
prometheus-metrics/scripts/: generate_traffic.py  init_microservices_data.py  init_sample_data.py  load_test.py  monitor_metrics.py
prometheus-metrics/tests/: __init__.py  conftest.py  test_demo.py  test_health.py  test_integration.py  test_metrics.py  test_microservices.py  test_orders.py  test_payments.py  test_users.py
